--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -10,6 +10,8 @@
     The target users for HMS are hydrological and water quality modelers and analysts.
 
     Additional information about HMS and how to use the components can be found on the <a href="/hms/help/">HMS documentation help page.</a>
+
+    <div class="button" (click)="gotoMain()">Got it</div>
     
     <h4>Disclaimers</h4>
     HMS functionality will be limited when using the Internet Explorer web browser. We recommend using the latest
