updated hide/show of comid selected input

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -42,8 +42,7 @@
         </div>
     </div>
 
-    <div class="container-item" id="segment-form">
-        <div>Segment alt loadings</div>
+    <div *ngIf="mapService.comidClicked" class="container-item" id="segment-form">
         <app-comid-select-input></app-comid-select-input>
     </div>
 
