--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -1,4 +1,4 @@
-<h4>Comid: {{mapService.selectedComid}}</h4>
+<h4>Comid:</h4>
 <form class="form-row" [formGroup]="inputFormGroup">
     <label>SV Index</label>
     <select></select>
