--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,7 @@
 <body>
     <app-header></app-header>
     <app-expansion-panel-left [open]="true"></app-expansion-panel-left>
-    <app-map (updateCoords)="updateCoords($event)"></app-map>
+    <app-map></app-map>
     <app-expansion-panel-right [open]="true"></app-expansion-panel-right>
     <app-footer></app-footer>
 </body>
