connected comid-select to simulation.interfaceData

--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -1,5 +1,5 @@
-<h4>Comid:</h4>
-<form class="form-row" [formGroup]="inputFormGroup">
+<h4>Comid: {{ selectedComId || "no stream segment selected" }}</h4>
+<form class="form-row" [formGroup]="inputFormGroup" *ngIf="selectedComId">
     <label>SV Index</label>
     <select></select>
     <label>Use Constant Loading?</label>
