--- a/src/app/components/map/map-control/map-control.component.css
+++ b/src/app/components/map/map-control/map-control.component.css
@@ -3,7 +3,7 @@
     height: 100%;
     min-width: 180px;
     background-color: lightsteelblue;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto 1fr;
 }
 
 .item {
