--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -6,6 +6,10 @@
     </div>
     
     <div class="item">
-        <app-layer-control *ngFor="let feature of features" [feature]="feature"></app-layer-control>
+        <app-layer-control *ngFor="let feature of defaultFeatures" [feature]="feature"></app-layer-control>
+    </div>
+
+    <div class="item">
+        <app-layer-control *ngFor="let feature of simFeatures" [feature]="feature"></app-layer-control>
     </div>
 </div>
