implemented loading base json to simdata

--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -45,6 +45,12 @@
     grid-template-columns: 1fr 1fr;
 }
 
+.control {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+}
+
 .controls {
     column-gap: 1rem;
 }
@@ -65,30 +71,7 @@
     cursor: pointer;
 }
 
-mat-progress-bar {
+#mat-progress-bar {
     width: 95%;
+    height: 2rem;
 }
-
-.data-output-options {
-    display: inline;
-}
-
-.output-viewport {
-    height: 200px;
-    width: 200px;
-    border: 1px solid black;
-}
-
-.output-item {
-    height: 50px;
-}
-
-.output-viewport2 {
-    height: 200px; /* this has to be set or the container goes as tall as it needs to be to fit the content, will fix later */
-    width: 100%;
-    border: 1px solid black;
-    word-wrap: break-word;
-    overflow-y: auto;
-}
-
-
