--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -15,7 +15,7 @@
     padding: .5rem;
     border: 1px solid black;
     border-radius: 5px;
-    background-color: lightgoldenrodyellow;
+    background-color: var(--main-color);
 }
 
 #coords-form,
