--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -22,7 +22,7 @@
                     <div class="button" (click)="clearCatchment()">clear catchment</div>
                 </div>
             </div>
-            <div class="control" *ngIf="huc && catchment">
+            <div class="control" *ngIf="huc && catchment && !stream">
                 <div class="button" *ngIf="!loadingStream" (click)="getStreamNetwork()">Get stream network</div>
                 <div class="button" *ngIf="loadingStream"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
             </div>
