--- a/src/app/components/map/layer-control/layer-control.component.html
+++ b/src/app/components/map/layer-control/layer-control.component.html
@@ -12,13 +12,13 @@
         <form id="editor-form" *ngIf="feature" [formGroup]="styleForm">
             <div class="editor-row">
                 <div class="editor-item">
-                    <input type="color" formControlName="color" (change)="updateStyle()"/>
+                    <input type="color" formControlName="color" (change)="updateStyle(feature.type)"/>
                 </div>
                 <div class="editor-item">
                     <mat-icon>line_weight</mat-icon> 
                 </div>
                 <div class="editor-item">
-                    <select formControlName="weight" (change)="updateStyle()">
+                    <select formControlName="weight" (change)="updateStyle(feature.type)">
                         <option value="1">1px</option>
                         <option value="2">2px</option>
                         <option value="3">3px</option>
@@ -32,15 +32,15 @@
                     </select>
                 </div>
             </div>
-            <div class="editor-row">
+            <div class="editor-row" *ngIf="feature.type == 'simfeature' || feature.type == 'feature'">
                 <div class="editor-item">
-                    <input type="color" formControlName="fillColor" (change)="updateStyle()"/>
+                    <input type="color" formControlName="fillColor" (change)="updateStyle(feature.type)"/>
                 </div>
                 <div class="editor-item">
                     <mat-icon>opacity</mat-icon> 
                 </div>
                 <div class="editor-item">
-                    <select formControlName="fillOpacity" (change)="updateStyle()">
+                    <select formControlName="fillOpacity" (change)="updateStyle(feature.type)">
                         <option value="0">no fill</option>
                         <option value=".1">10%</option>
                         <option value=".2">20%</option>
